tests/neg/i22593b/Test.scala
object CoreSpec  {
  jam.brew(jam.internal.defaultJamConfig) // error
  jam.brew // error
}